--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
 
         <nav>
             <!-- White Navbar -->
-            <div class="container-fluid d-flex position-fixed mt-2 align-items-center">
+            <div class="container-fluid d-flex position-fixed pt-1 align-items-center index-2 bg-white">
                 <div class="logo mb-lg-3">
                     <img src="img/play_logo.svg" alt="">
                 </div>
@@ -83,13 +83,14 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
     <main>
         <!-- JUMOTRON -->
         <section class="section-one">
-            <div class="container p-t-7rem p-x-2rem">
+            <div class="container mega-padd white">
                 <div class="row">
-                    <div class="col-md-11 col-lg-4">
-                        <img src="" alt=""> <!--max-width 60%-->
-                        <h4></h4>
-                        <p></p>
-                        <button></button>
+                    <div class="col col-lg-4 px-4">
+                        <img class="img-returnal pb-3" src="./img/returnal-hero-banner-logo.png" alt=""> <!--max-width 60%-->
+                        <h2 class="pb-3"><b>Rompi il cerchio</b></h2>
+                        <p><b>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo
+                            esplosivo thriller fantascientifico, disponibile in esclusvia su PS5</b></p>
+                        <button class="btn btn-danger">Acquista ora</button>
                     </div>
                 </div>
             </div>
