Done sectio two

--- a/index.html
+++ b/index.html
@@ -97,11 +97,36 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-two">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
+            <div class="container-fluid">
+                <div class="row g-3">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <div class="img-container">
-
+                            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                         </div>
                     </div>
                 </div>
