--- a/index.html
+++ b/index.html
@@ -134,54 +134,67 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-three">
-            <div class="container">
-                <h2></h2>
-                <h4></h4>
-                <h5></h5>
+            <div class="container text-center">
+                <p class="blue m-0"><b>PLAY HAS NO LIMITS</b></p>
+                <h2 class="huge-title">Ecco la PlayStation 5</h2>
+                <h5>Tuffati in nuove possibilità di gioco completamente inaspettate</h5>
             </div>
         </section>
 
         <section class="section-four">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5">
-                        <div class="mini-cont d-flex direction-col align-items-middle">
-                            <h2></h2>
-                            <p></p>
-                            <button></button>
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-md-5">
+                        <div class="d-flex flex-column justify-content-center">
+                            <h2 class="huge-title">Console PlayStation 5</h2>
+                            <h5 class="my-4">Sperimenta la nuova generazione di incredibili giochi playstation</h5>
+                            <button class="btn btn-primary">Maggiori informazioni</button>
                         </div>
                     </div>
-                    <div class="col-lg-7"></div>
+                    <div class="col-md-7">
+                        <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                    </div>
                 </div>
-                <div class="row">
+                <!-- SECONDA ROW DEL CONTAINER -->
+                <div class="row px-md-4">
                     <div class="col-4 col-md">
-                        <div class="img-container"></div>
-                        <div class="text-container d-md-none">
-                            TESTO TESTO                        
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                        </div>
+                        <div class="text-container d-none d-md-block">
+                            Console PS5                    
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="img-container"></div>
-                        <div class="text-container d-md-none">
-                            TESTO TESTO                        
+                    <div class="col-4 col-md">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+                        </div>
+                        <div class="text-container d-none d-md-block">
+                            Controller Wireless Dualsense TM                    
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="img-container"></div>
-                        <div class="text-container d-md-none">
-                            TESTO TESTO                        
+                    <div class="col-4 col-md">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/headset-thumb.png" alt="">
+                        </div>
+                        <div class="text-container d-none d-md-block">
+                            Cuffie Wireless con microfono PULSE 3 TM                     
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="img-container"></div>
-                        <div class="text-container d-md-none">
-                            TESTO TESTO                        
+                    <div class="col-4 col-md">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/remote-thumb.png" alt="">
+                        </div>
+                        <div class="text-container d-none d-md-block">
+                            Telecomando Media                        
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="img-container"></div>
-                        <div class="text-container d-md-none">
-                            TESTO TESTO                        
+                    <div class="col-4 col-md">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+                        </div>
+                        <div class="text-container d-none d-md-block">
+                            Telecamera HD                        
                         </div>
                     </div>
                 </div>
