--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
     <main>
         <!-- JUMOTRON -->
         <section class="section-one">
-            <div class="container mega-padd white">
+            <div class="container-fluid mega-padd white">
                 <div class="row">
                     <div class="col col-lg-4 px-4">
-                        <img class="img-returnal pb-3" src="./img/returnal-hero-banner-logo.png" alt=""> <!--max-width 60%-->
+                        <img class="img-returned pb-3" src="./img/returnal-hero-banner-logo.png" alt=""> <!--max-width 60%-->
                         <h2 class="pb-3"><b>Rompi il cerchio</b></h2>
                         <p><b>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo
                             esplosivo thriller fantascientifico, disponibile in esclusvia su PS5</b></p>
@@ -170,7 +170,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                             <img class="img-fluid" src="img/joypad-thumb.png" alt="">
                         </div>
                         <div class="text-container d-none d-md-block">
-                            Controller Wireless Dualsense TM                    
+                            Controller Wireless Dualsense™          
                         </div>
                     </div>
                     <div class="col-4 col-md">
@@ -178,7 +178,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                             <img class="img-fluid" src="img/headset-thumb.png" alt="">
                         </div>
                         <div class="text-container d-none d-md-block">
-                            Cuffie Wireless con microfono PULSE 3 TM                     
+                            Cuffie Wireless con microfono PULSE 3™                   
                         </div>
                     </div>
                     <div class="col-4 col-md">
@@ -202,20 +202,100 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-five">
-            <div class="container p-x-2rem">
+            <div class="container-fluid white">
                 <div class="row">
-                    <div class=" col-lg-4">
-                        <img src="" alt=""> <!--max-width 60%-->
-                        <h4></h4>
-                        <p></p>
-                        <button></button>
+                    <div class="col col-lg-4 px-4">
+                        <img class="img-ittakestwo pb-3" src="./img/it-takes-two-logo.png" alt=""> <!--max-width 60%-->
+                        <h2 class="pb-3"><b>Un'avventura cooperativa selvaggia ti attende</b></h2>
+                        <p>Trova un amico e partite insieme per l'avventura più folle delle vostre
+                            vite in "It takes two", un gioco d'avventura cooperativa a piattaforme che 
+                            stravolge il suo genere.
+                        </p>
+                        <button class="btn btn-danger">Acquista ora</button>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="section-six">
-
+            <div class="container-fluid white">
+                <h2>Nuove uscite</h2>
+                <h4 class="py-3">Giochi incredibile per PS4 e PS5 disponibili ora.</h4>
+                <div class="row g-3">
+                    <div class="col-6 col-sm-4 col-lg-2 ">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <div>Tony Hawk's™ Pro Skater™ 1 + 2</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="img-container pb-2">
+                            <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <div>Crash Bandicoot 4: It's About Time</div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section-seven">
