--- a/index.html
+++ b/index.html
@@ -299,24 +299,36 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-seven">
-            <div class="container">
-                <h3></h3>
-                <p></p>
-                <div class="row">
-                    <div class="col da-definire">
-                        <h3></h3>
-                        <p></p>
-                        <button></button>
+            <div class="container-fluid">
+                <div class="text-center">
+                    <h2 class="py-3">Esplora PlayStation 4</h2>
+                    <h5>Giochi incredibili e intrattenimento senza fine.</h5>
+                    <h5>Non c'è mai stato un momento migliore per giocare sulla tua PS4.</h5>
+                </div>
+                <div class="row flex-column flex-md-row">
+                    <div class="col col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        </div>
+                        <h2 class="huge-title">PlayStation 4</h2>
+                        <h5 class="my-3">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</h5>
+                        <button class="btn btn-primary">Scopri di più</button>
                     </div>
-                    <div class="col da-definire">
-                        <h3></h3>
-                        <p></p>
-                        <button></button>
+                    <div class="col col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+                        </div>
+                        <h2 class="huge-title">PlayStation VR</h2>
+                        <h5 class="my-3">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</h5>
+                        <button class="btn btn-primary">Scopri di più</button>
                     </div>
-                    <div class="col da-definire">
-                        <h3></h3>
-                        <p></p>
-                        <button></button>
+                    <div class="col col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                        </div>
+                        <h2 class="huge-title">Accessori</h2>
+                        <h5 class="my-3">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</h5>
+                        <button class="btn btn-primary">Scopri di più</button>
                     </div>
                 </div>
             </div>
