--- a/index.html
+++ b/index.html
@@ -335,15 +335,21 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-eight banner">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6 align-items-center py-4(soloaquestacol)">
-                        <img src="" alt="">
-                        <p></p>
-                        <button></button>
+            <div class="container-fluid ">
+                <div class="row align-items-center ">
+                    <div class="col-md-6 align-items-center py-3">
+                        <div class="img-container">
+                            <img class="img-fluid w-50" src="img/ps-plus-logo.png" alt="">
+                        </div>
+                        <p class="py-3">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,
+                            giochi mensili, sconti esclusivi e altro ancora.
+                        </p>
+                        <button class="btn">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
-                        <img class="img-fluid" src="" alt="">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
