--- a/index.html
+++ b/index.html
@@ -356,13 +356,27 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-nine">
-            <h2></h2>
-            <h5></h5>
-            <div class="container">
-                <div class="row">
-                    <div class="col col-md-4"></div>
-                    <div class="col col-md-4"></div>
-                    <div class="col col-md-4"></div>
+            <div class="text-center">
+                <h2>Nuovi sconti sul PlayStation Store</h2>
+                <h5 class="pb-4">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</h5>
+            </div>
+                <div class="container-fluid px-3 px-md-4">
+                <div class="row g-4">
+                    <div class="col-12 col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
