--- a/index.html
+++ b/index.html
@@ -382,15 +382,21 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-ten banner">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6 align-items-center">
-                        <img src="" alt="">
-                        <p></p>
-                        <button></button>
+            <div class="container-fluid">
+                <div class="row align-items-center ">
+                    <div class="col-md-6 align-items-center py-3">
+                        <div class="img-container">
+                            <img class="img-fluid w-50" src="img/ps-now-logo-two-column.png" alt="">
+                        </div>
+                        <p class="py-3 white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi
+                            per PS4, PS3, PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </p>
+                        <button type="button" class="btn btn-light mb-3">Esplora PlayStation Now</button>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
-                        <img class="img-fluid" src="" alt="">
+                        <div class="img-container">
+                            <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
