--- a/index.html
+++ b/index.html
@@ -403,23 +403,21 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-eleven">
-            <h4></h4>
-            <div class="container justify-content-center">
-                <div class="row">
-                    <div class="col-6 centered(check)">
-                        <div class="row">
-                            <div class="col-sm col-md-3">
-                                <img src="" alt=""> <!-- -->                            
-                            </div>
-                            <div class="col-sm col-md-3">
-                                <img src="" alt=""> <!-- -->                            
-                            </div>
-                            <div class="col-sm col-md-3">
-                                <img src="" alt=""> <!-- -->                            
-                            </div>
-                            <div class="col-sm col-md-3">
-                                <img src="" alt=""> <!-- -->                            
-                            </div>
+            <div class="container-fluid container-md text-center">
+                <h2>Seguici sui social media</h2>
+                <div class="row justify-content-center">
+                        <div class="row g-4">
+                           <div class="col-6 col-sm-3 mb-3">
+                               <img class="img-fluid" src="img/twitter.jpg" alt=""> <!-- -->                            
+                           </div>
+                           <div class="col-6 col-sm-3 mb-3">
+                               <img class="img-fluid" src="img/facebook.jpg" alt=""> <!-- -->                            
+                           </div>
+                           <div class="col-6 col-sm-3">
+                               <img class="img-fluid" src="img/instagram.jpg" alt=""> <!-- -->                            
+                           </div>
+                           <div class="col-6 col-sm-3">
+                            <img class="img-fluid" src="img/youtube.png" alt=""> <!-- -->                            
                         </div>
                     </div>
                 </div>
