--- a/index.html
+++ b/index.html
@@ -408,16 +408,16 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                 <div class="row justify-content-center">
                         <div class="row g-4">
                            <div class="col-6 col-sm-3 mb-3">
-                               <img class="img-fluid" src="img/twitter.jpg" alt=""> <!-- -->                            
+                               <a href="#"><img class="img-fluid" src="img/twitter.jpg" alt=""></a>                          
                            </div>
                            <div class="col-6 col-sm-3 mb-3">
-                               <img class="img-fluid" src="img/facebook.jpg" alt=""> <!-- -->                            
+                                <a href="#"><img class="img-fluid" src="img/facebook.jpg" alt=""></a>                           
                            </div>
                            <div class="col-6 col-sm-3">
-                               <img class="img-fluid" src="img/instagram.jpg" alt=""> <!-- -->                            
+                                <a href="#"><img class="img-fluid" src="img/instagram.jpg" alt=""></a>                            
                            </div>
                            <div class="col-6 col-sm-3">
-                            <img class="img-fluid" src="img/youtube.png" alt=""> <!-- -->                            
+                                <a href="#"><img class="img-fluid" src="img/youtube.png" alt=""></a>                           
                         </div>
                     </div>
                 </div>
@@ -427,38 +427,59 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
 
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col col-lg-6">
-                    <img src="" alt="">logo 
+            <div class="row white align-items-start py-5">
+                <div class="col-12 col-lg-6 py-4">
+                    <div class="img-container py-4">
+                        <img style="width: 90px" src="img/ps-footer.svg" alt="">
+                    </div>
+                    <div class="text-container">
+                        <i class="fa-solid fa-globe py-1"></i>
+                        <a href="#">Country/Region Italy</a>
+                    </div>
+                    
                 </div>
-                <div class="col col-lg-6">
+                <div class="col-12 col-lg-6 py-4">
                     <div class="row">
                         <div class="col-md-4">
                             <ul>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
                             </ul>
                         </div>
                         <div class="col-md-4">
                             <ul>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
                             </ul>
                         </div>
                         <div class="col-md-4">
                             <ul>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
-                                <li><a href="#"></a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
+                                <li><a href="#">Link footer n</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-12 col-lg-6 py-3">
+                    <div class="img-container py-2">
+                        <img style="width: 150px" src="img/sie-logo.svg" alt="">
+                    </div>
+                    <div class="text-container">
+                        <p>WebSite ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti,
+                            nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica
+                            e immagini associati sono marchi registrati e/o materiale protetto da copyright
+                            dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
