--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-two">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row g-3">
                     <div class="col-6 col-sm-4 col-lg-2">
                         <div class="img-container">
@@ -142,7 +142,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-four">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-5">
                         <div class="d-flex flex-column justify-content-center">
@@ -202,7 +202,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-five">
-            <div class="container-fluid white">
+            <div class="container white">
                 <div class="row">
                     <div class="col col-lg-4 px-4">
                         <img class="img-ittakestwo pb-3" src="./img/it-takes-two-logo.png" alt=""> <!--max-width 60%-->
@@ -218,7 +218,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-six">
-            <div class="container-fluid white">
+            <div class="container white">
                 <h2>Nuove uscite</h2>
                 <h4 class="py-3">Giochi incredibile per PS4 e PS5 disponibili ora.</h4>
                 <div class="row g-3">
@@ -299,7 +299,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-seven">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="text-center">
                     <h2 class="py-3">Esplora PlayStation 4</h2>
                     <h5>Giochi incredibili e intrattenimento senza fine.</h5>
@@ -360,7 +360,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                 <h2>Nuovi sconti sul PlayStation Store</h2>
                 <h5 class="pb-4">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</h5>
             </div>
-                <div class="container-fluid px-3 px-md-4">
+                <div class="container">
                 <div class="row g-4">
                     <div class="col-12 col-md-4">
                         <div class="img-container">
@@ -403,7 +403,7 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
         </section>
 
         <section class="section-eleven">
-            <div class="container-fluid container-md text-center">
+            <div class="container text-center">
                 <h2>Seguici sui social media</h2>
                 <div class="row justify-content-center">
                         <div class="row g-4">
