--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/bonus.css">
 </head>
 
 <!--Col 4 sopra i giochi di Crash bandicoot
@@ -37,38 +38,73 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                 </div>
                 <div class="left-hide d-none d-lg-flex">
                     <ul class="d-flex flex-grow-1 gap-3 align-items-center">
-                        <li><a href="#">
-                            Giochi
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
-                        <li><a href="#">
-                            Hardware
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
-                        <li><a href="#">
-                            Servizi
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
-                        <li><a href="#">
-                            Novità
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
-                        <li><a href="#">
-                            Fai acquisti
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
-                        <li><a href="#">
-                            Supporto
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Giochi</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Hardware
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt=""></a>
+                        </li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Servizi</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Novità</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Fai acquisti</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">Supporto</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
                     </ul>
                 </div>
                 <div class="right-hide d-none d-lg-flex m-left-auto">
                     <ul class="d-flex gap-2 align-items-center">
-                        <li><a href="#">
-                            My Playstation
-                            <img src="img/chevron-down-solid.svg" alt="">
-                        </a></li>
+                        <li class="nav-item dropdown d-flex">
+                            <a class="nav-link" href="#">My PlayStation</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                            <img src="img/chevron-down-solid.svg" alt="">  
+                        </li>
                         <button type="button" class="btn btn-dark white">Accedi</button>
                         <img src="img/lens.svg" alt="" style="width: 30px;">
                     </ul>
