--- a/index.html
+++ b/index.html
@@ -110,7 +110,66 @@ MOLTO MEGLIO UL CON DISPLAY FLEX. 3 CONTENITORI (Logo, sezioni, area login/searc
                     </ul>
                 </div>
                 <div class="hamburger-menu p-2 d-lg-none m-left-auto">
-                    <i class="fa-solid fa-bars"></i>
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    <div class="hamburger-hidden">
+                        <ul>
+                            <li><a href="#"><b>Giochi</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>    
+                        <ul>
+                            <li><a href="#"><b>Hardware</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>Servizi</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>Novità</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>Servizi</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>Fai acquisti</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>Supporto</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#"><b>PlayStation</b></a></li>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                            <li><a href="#">Link 4</a></li>
+                        </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
